CREATE TABLE roles (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    name VARCHAR(50) NOT NULL,
    description VARCHAR(255),
    created_at TIMESTAMP(6) WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT pk_roles PRIMARY KEY (id),
    CONSTRAINT uk_roles_name UNIQUE (name),
    CONSTRAINT ck_roles_name_not_blank CHECK (btrim(name) <> '')
);

CREATE TABLE users (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    first_name VARCHAR(100) NOT NULL,
    last_name VARCHAR(100) NOT NULL,
    email VARCHAR(254) NOT NULL,
    password_hash VARCHAR(255) NOT NULL,
    phone VARCHAR(30),
    status VARCHAR(20) NOT NULL DEFAULT 'ACTIVE',
    created_at TIMESTAMP(6) WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP(6) WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT pk_users PRIMARY KEY (id),
    CONSTRAINT uk_users_email UNIQUE (email),
    CONSTRAINT ck_users_first_name_not_blank CHECK (btrim(first_name) <> ''),
    CONSTRAINT ck_users_last_name_not_blank CHECK (btrim(last_name) <> ''),
    CONSTRAINT ck_users_email_normalized CHECK (email = lower(btrim(email)) AND email <> ''),
    CONSTRAINT ck_users_password_hash_not_blank CHECK (btrim(password_hash) <> ''),
    CONSTRAINT ck_users_status CHECK (status IN ('ACTIVE', 'INACTIVE', 'BLOCKED'))
);

CREATE TABLE user_roles (
    user_id BIGINT NOT NULL,
    role_id BIGINT NOT NULL,
    CONSTRAINT pk_user_roles PRIMARY KEY (user_id, role_id),
    CONSTRAINT fk_user_roles_user FOREIGN KEY (user_id)
        REFERENCES users (id) ON DELETE CASCADE,
    CONSTRAINT fk_user_roles_role FOREIGN KEY (role_id)
        REFERENCES roles (id) ON DELETE RESTRICT
);

CREATE INDEX idx_user_roles_role_id ON user_roles (role_id);

CREATE TABLE apartments (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    torre VARCHAR(20) NOT NULL,
    numero VARCHAR(20) NOT NULL,
    piso INTEGER,
    activo BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP(6) WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT pk_apartments PRIMARY KEY (id),
    CONSTRAINT uk_apartments_torre_numero UNIQUE (torre, numero),
    CONSTRAINT ck_apartments_torre_not_blank CHECK (btrim(torre) <> ''),
    CONSTRAINT ck_apartments_numero_not_blank CHECK (btrim(numero) <> ''),
    CONSTRAINT ck_apartments_piso_non_negative CHECK (piso IS NULL OR piso >= 0)
);

CREATE TABLE owners (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    user_id BIGINT NOT NULL,
    apartment_id BIGINT NOT NULL,
    principal BOOLEAN NOT NULL DEFAULT FALSE,
    created_at TIMESTAMP(6) WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT pk_owners PRIMARY KEY (id),
    CONSTRAINT uk_owners_user_apartment UNIQUE (user_id, apartment_id),
    CONSTRAINT fk_owners_user FOREIGN KEY (user_id)
        REFERENCES users (id) ON DELETE CASCADE,
    CONSTRAINT fk_owners_apartment FOREIGN KEY (apartment_id)
        REFERENCES apartments (id) ON DELETE RESTRICT
);

CREATE INDEX idx_owners_apartment_id ON owners (apartment_id);
CREATE UNIQUE INDEX uk_owners_principal_apartment
    ON owners (apartment_id)
    WHERE principal;

CREATE TABLE tenants (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    user_id BIGINT NOT NULL,
    apartment_id BIGINT NOT NULL,
    start_date DATE NOT NULL,
    end_date DATE,
    created_at TIMESTAMP(6) WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT pk_tenants PRIMARY KEY (id),
    CONSTRAINT uk_tenants_user_apartment_start UNIQUE (user_id, apartment_id, start_date),
    CONSTRAINT fk_tenants_user FOREIGN KEY (user_id)
        REFERENCES users (id) ON DELETE CASCADE,
    CONSTRAINT fk_tenants_apartment FOREIGN KEY (apartment_id)
        REFERENCES apartments (id) ON DELETE RESTRICT,
    CONSTRAINT ck_tenants_date_range CHECK (end_date IS NULL OR end_date >= start_date)
);

CREATE INDEX idx_tenants_apartment_id ON tenants (apartment_id);
CREATE UNIQUE INDEX uk_tenants_active_user
    ON tenants (user_id)
    WHERE end_date IS NULL;

INSERT INTO roles (name, description) VALUES
    ('RESIDENTE', 'Consulta informacion y gestiona interacciones residenciales'),
    ('VIGILANTE', 'Opera el control de acceso y la logistica diaria'),
    ('ADMINISTRACION', 'Gestiona comunicaciones, configuracion y cobros');
